k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-v2
  namespace: retail-v2
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "$http_x_retail_region:$http_x_retail_partition_key"
spec:
  ingressClassName: nginx
  rules:
    - host: retail-v2.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retail-v2-search
                port:
                  number: 80
